1. Fix Green Flicker when changing teacher name 2. Open slector category when writing name 3. Dont display Group in Teacher schedule screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
     --dark-text-color-active: #585858;
 
     --placeholder-color: #CECECE;
-    --disabled-text-color: #CCCCCC;
+    --disabled-text-color: #AFAFAF;
     --input-background-color: #FFFFFF;
     --input-color: #494949;
     --input-border: #e0e0e0;
